--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
       - text: "Hands-on Exercise"
         menu: 
           - text: "Hands-on Exercise 1"
-          - href: "Hands-on_exercise/Hands-on_EX01/Hands-on_EX01.html"
+            href: "Hands-on_exercise/Hands-on_EX01/Hands-on_EX01.html"
     right:
       - href: index.qmd
         text: Home
