--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "ISSS608-VAA"
+  title: "Visual Analytics"
   navbar: 
     left:
       - text: "Hands-on Exercise"
@@ -15,6 +15,8 @@ website:
         menu: 
           - text: "Take Home Exercise 1"
             href: "Take_Home_Exercise/Take_Home_Exercise_1/Take_Home_Exercise_1.html"
+          - text: "Take Home Exercise 2"
+            href: "Take_Home_Exercise/Take_Home_Exercise_2/Take_Home_Exercise_2.html"
     right:
       - href: index.qmd
         text: Home
