--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,8 @@ website:
             href: "Hands-on_exercise/Hands-on_EX01/Hands-on_EX01.html"
           - text: "Hands-on Exercise 2"
             href: "Hands-on_exercise/Hands-on_EX02/Hands-on_EX02.html"
+          - text: "Hands-on Exercise 3"
+            href: "Hands-on_exercise/Hands-on_EX03/Hands-on_EX03.html"
       - text: "In-Class Exercise"
         menu: 
           - text: "In-Class Exercise 3"
