--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,14 @@ website:
   title: "Visual Analytics"
   navbar: 
     left:
-      - text: "Hands-on Exercise"
+      - icon: house-door
+        href: index.qmd
+        text: Home
+      - about.qmd
+
+    right:
+      - icon: hand-index
+        text: "Hands-on Exercise"
         menu: 
           - text: "Hands-on Exercise 1"
             href: "Hands-on_exercise/Hands-on_EX01/Hands-on_EX01.html"
@@ -13,20 +20,20 @@ website:
             href: "Hands-on_exercise/Hands-on_EX02/Hands-on_EX02.html"
           - text: "Hands-on Exercise 3"
             href: "Hands-on_exercise/Hands-on_EX03/Hands-on_EX03.html"
-      - text: "In-Class Exercise"
+          - text: "Hands-on Exercise 4"
+            href: "Hands-on_exercise/Hands-on_EX04/Hands-on_EX04.html"
+      - icon: person-square
+        text: "In-Class Exercise"
         menu: 
           - text: "In-Class Exercise 3"
             href: "In-class_Exercise/In-class_Ex03.html"
-      - text: "Take Home Exercise"
+      - icon: graph-up
+        text: "Take Home Exercise"
         menu: 
           - text: "Take Home Exercise 1"
             href: "Take_Home_Exercise/Take_Home_Exercise_1/Take_Home_Exercise_1.html"
           - text: "Take Home Exercise 2"
             href: "Take_Home_Exercise/Take_Home_Exercise_2/Take_Home_Exercise_2.html"
-    right:
-      - href: index.qmd
-        text: Home
-      - about.qmd
 
 format:
   html:
