--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,6 +40,7 @@ website:
           - text: "Take Home Exercise 2"
             href: "Take_Home_Exercise/Take_Home_Exercise_2/Take_Home_Exercise_2.html"
           - text: "Take Home Exercise 3"
+            href: "Take_Home_Exercise/Take_Home_Exercise_3/Take_Home_Exercise_3.html"
 
 format:
   html:
