--- a/_quarto.yml
+++ b/_quarto.yml
@@ -41,6 +41,8 @@ website:
             href: "Take_Home_Exercise/Take_Home_Exercise_2/Take_Home_Exercise_2.html"
           - text: "Take Home Exercise 3"
             href: "Take_Home_Exercise/Take_Home_Exercise_3/Take_Home_Exercise_3.html"
+          - text: "Take Home Exercise 4"
+            href: "Take_Home_Exercise/Take_Home_Exercise_4/Take_Home_Exercise_4.html"
 
 format:
   html:
