--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,8 @@ website:
             href: "In-class_Exercise/In-class_Ex06.html"
           - text: "In-Class Exercise 7"
             href: "In-class_Exercise/In-class_Ex07.html"
+          - text: "In-Class Exercise 8"
+            href: "In-class_Exercise/In-class_Ex08.html"
       - icon: graph-up
         text: "Take Home Exercise"
         menu: 
