--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,8 @@ website:
             href: "In-class_Exercise/In-class_Ex08.html"
           - text: "In-Class Exercise 9"
             href: "In-class_Exercise/In-class_Ex09.html"
+          - text: "In-Class Exercise 10"
+            href: "In-class_Exercise/In-class_Ex10.html"
       - icon: graph-up
         text: "Take Home Exercise"
         menu: 
